# Khorium

./: .gitignore  CLAUDE.md  CONTRIBUTING.rst  DockerFile  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  render.yaml
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
scripts/: install.sh  start.sh
setup/: apps.yml  initialize.sh
src/: app.py
src/core/: constants.py  vtk_pipeline.py
src/khorium/app/: app.py  config.py  core.py  main.py
src/khorium/app/controllers/: file_controller.py  mesh_controller.py  view_controller.py
src/khorium/app/core/: blade.stl  cad_000.vtu  cad_000_mesh.vtk  generated_mesh.vtk  state_manager.py  vtk_pipeline.py
src/khorium/app/services/: code_execution_service.py  file_service.py  mesh_service.py
src/khorium/app/ui/components/: cards.py  toolbar.py  viewport.py
src/khorium/app/ui/layouts/: main_layout.py
src/khorium/app/utils/: hot_reload.py
src/khorium/module/: __init__.py
src/ui/components/: cards.py
tests/: test_import.py
vue-components/: package-lock.json  package.json  vite.config.js
