[project]
name = "khorium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "trame>=3.10.2",
    "trame-components>=2.5.0",
    "trame-vtk>=2.9.0",
    "trame-vuetify>=3.0.1",
    "vtk>=9.5.0",
]
